[package]
name = "common_utils"
version = "0.9.0"
edition = "2021"

[dependencies]
#
rust-crypto = "0.2.36"     

# 随机数生成
rand = "0.8"               

# 十六进制格式
hex = "0.4"

# base64
base64 = "0.12.1" 

hmac = "0.12"   # 或者最新版
sha2 = "0.10"    # 或者最新版

# 一个帮助生成自定义错误类型的库，简化错误处理
thiserror = "2.0.0"

# rsa实现加解密
rsa = "0.7"

# 使用最新版本，建议在文档中确认当前最新版本
zeroize = "1.5" 

[dev-dependencies]
time = "0.1.41"